# MediaCountdowns

./: CMakeLists.txt  Media Countdowns.lnk  PROGRESS.md  README.md  clean.bat  deploy.bat
MainApp/: CMakeLists.txt  mainwindow.ui
MainApp/src/: countdownwidget.h  customtiledialog.cpp  customtiledialog.h  edittiledialog.cpp  edittiledialog.h  jsonmanager.cpp  jsonmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  outlinedlabel.h  tilewidget.cpp  tilewidget.h  tmdbscraper.cpp
TrayApp/: CMakeLists.txt
TrayApp/src/: main.cpp  trayapp.cpp  trayapp.h
shared/: tiledata.h
src/: addtiledialog.cpp  addtiledialog.h  applogger.h  countdownwidget.h  customtiledialog.cpp  customtiledialog.h  edittiledialog.cpp  edittiledialog.h  jsonmanager.cpp  main.cpp  mainwindow.cpp  mainwindow.h  outlinedlabel.h  tiledata.h  tilewidget.cpp  tilewidget.h  tmdbscraper.cpp  tmdbscraper.h
